<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tugas2</string>
    <string name="batal">Batal</string>
    <string name="foto">foto</string>
    <string name="pratama_puji_a">PRATAMA PUJI A.</string>
    <string name="_18082010016">18082010016</string>
    <string name="remember_me">Remember Me</string>
    <string name="nama">Nama :</string>
    <string name="npm">NPM :</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_npm">Masukkan NPM</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_akun_ku">Masuk Akun Ku</string>
</resources>